# video-editor

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
lib/libmpeg2/lib/pkgconfig/: libmpeg2.pc  libmpeg2convert.pc
lib/raylib/include/: raygui.h
resources/: layout_name.c  test.mpg
src/: gui.c  gui.h  input.c  input.h  main.c  video.c  video.h
src/gui/: file_dialog.c  file_dialog.h  gui.c  gui.h  media_control.c  media_control.h  media_pool.c  media_pool.h  menu_bar.c  menu_bar.h  style.h  timeline.c  timeline.h
